--- a/Chromi/Base.lproj/Main.storyboard
+++ b/Chromi/Base.lproj/Main.storyboard
@@ -456,15 +456,29 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="755"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sQE-h2-nFE">
-                                <rect key="frame" x="-5" y="0.0" width="375" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <navigationBar contentMode="scaleToFill" largeTitles="YES" translatesAutoresizingMaskIntoConstraints="NO" id="sQE-h2-nFE">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="108"/>
                                 <items>
                                     <navigationItem title="Settings" largeTitleDisplayMode="always" id="no7-HI-gWY"/>
                                 </items>
+                                <navigationBarAppearance key="scrollEdgeAppearance"/>
                             </navigationBar>
+                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DkM-bn-jJj">
+                                <rect key="frame" x="163" y="209" width="49" height="31"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <connections>
+                                    <action selector="displayTypeSwitched:" destination="KGd-Sg-8Wk" eventType="valueChanged" id="H2Z-oG-T8o"/>
+                                </connections>
+                            </switch>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Use Decimals" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ebS-oC-PAR">
+                                <rect key="frame" x="134" y="180" width="104" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qJp-R9-3BY">
-                                <rect key="frame" x="121" y="88" width="133" height="35"/>
+                                <rect key="frame" x="121" y="124" width="133" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="filled" title="Reset defaults"/>
@@ -475,12 +489,19 @@
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="VWD-z8-aNV"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="sQE-h2-nFE" firstAttribute="leading" secondItem="VWD-z8-aNV" secondAttribute="leading" id="6bS-VM-dN7"/>
+                            <constraint firstItem="sQE-h2-nFE" firstAttribute="top" secondItem="ZxW-Ef-Jid" secondAttribute="top" id="9Hz-Aa-B1N"/>
+                            <constraint firstItem="sQE-h2-nFE" firstAttribute="trailing" secondItem="VWD-z8-aNV" secondAttribute="trailing" id="gVL-PH-buu"/>
+                        </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="V8s-ZB-St1"/>
+                    <connections>
+                        <outlet property="useDecimalsSwitch" destination="DkM-bn-jJj" id="xXk-VC-aGo"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iW1-vh-uis" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3054" y="213"/>
+            <point key="canvasLocation" x="3053.5999999999999" y="212.80788177339903"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="AD9-wM-OMS">
