--- a/Chromi/Base.lproj/Main.storyboard
+++ b/Chromi/Base.lproj/Main.storyboard
@@ -25,7 +25,7 @@
                                 </textAttributes>
                                 <items>
                                     <navigationItem title="Chromi" id="LOJ-xC-ZTe">
-                                        <barButtonItem key="rightBarButtonItem" title="Item" image="gear" catalog="system" style="plain" id="bub-Q6-kxv">
+                                        <barButtonItem key="rightBarButtonItem" title="Item" image="gear" catalog="system" id="bub-Q6-kxv">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="RpN-IV-TSX">
                                                 <rect key="frame" x="307" y="5" width="52" height="34.333333333333336"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -53,8 +53,8 @@
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="19" translatesAutoresizingMaskIntoConstraints="NO" id="QNR-Kp-Ooz" userLabel="ColorSelectStack">
-                                        <rect key="frame" x="15.666666666666657" y="45.333333333333314" width="344" height="68"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="QNR-Kp-Ooz" userLabel="ColorSelectStack">
+                                        <rect key="frame" x="4.6666666666666572" y="45.333333333333314" width="366" height="68"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalCentering" translatesAutoresizingMaskIntoConstraints="NO" id="Fiz-oa-Kg9">
                                                 <rect key="frame" x="0.0" y="0.0" width="36" height="68"/>
@@ -78,21 +78,21 @@
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="rUy-Oz-SKR">
-                                                <rect key="frame" x="55" y="0.0" width="180" height="68"/>
+                                                <rect key="frame" x="46" y="0.0" width="210" height="68"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="INPUT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XjW-Mg-WW6">
-                                                        <rect key="frame" x="10" y="0.0" width="160" height="24"/>
+                                                        <rect key="frame" x="10" y="0.0" width="190" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Odm-vu-afW">
-                                                        <rect key="frame" x="0.0" y="24.000000000000057" width="180" height="44"/>
+                                                    <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" adjustsFontForContentSizeCategory="YES" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Odm-vu-afW">
+                                                        <rect key="frame" x="0.0" y="24.000000000000057" width="210" height="44"/>
                                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="44" id="obe-sG-33l"/>
                                                         </constraints>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                        <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
                                                         <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" keyboardType="numbersAndPunctuation" returnKeyType="done" enablesReturnKeyAutomatically="YES" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
                                                         <connections>
                                                             <action selector="inputColorUpdated:" destination="BYZ-38-t0r" eventType="editingChanged" id="hWI-oH-Ql0"/>
@@ -104,32 +104,34 @@
                                                 <constraints>
                                                     <constraint firstItem="XjW-Mg-WW6" firstAttribute="leading" secondItem="rUy-Oz-SKR" secondAttribute="leading" constant="10" id="34c-v9-gpB"/>
                                                     <constraint firstItem="Odm-vu-afW" firstAttribute="leading" secondItem="rUy-Oz-SKR" secondAttribute="leading" id="931-67-Rah"/>
-                                                    <constraint firstAttribute="width" constant="180" id="est-h4-FJF"/>
+                                                    <constraint firstAttribute="width" constant="210" id="est-h4-FJF"/>
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="P3C-Sl-IXD">
-                                                <rect key="frame" x="254" y="0.0" width="90" height="68"/>
+                                                <rect key="frame" x="266" y="0.0" width="100" height="68"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TYPE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rPI-Er-YyA">
-                                                        <rect key="frame" x="10" y="0.0" width="70" height="24"/>
+                                                        <rect key="frame" x="10" y="0.0" width="80" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uXU-tE-jQe">
-                                                        <rect key="frame" x="0.0" y="24.000000000000057" width="90" height="44"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="leading" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="uXU-tE-jQe">
+                                                        <rect key="frame" x="0.0" y="24.000000000000057" width="100" height="44"/>
                                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="90" id="UVw-77-oMt"/>
                                                             <constraint firstAttribute="height" constant="44" id="kt0-6X-VGG"/>
                                                         </constraints>
                                                         <state key="normal" title="Button"/>
-                                                        <buttonConfiguration key="configuration" style="plain"/>
+                                                        <buttonConfiguration key="configuration" style="plain" title=" ">
+                                                            <fontDescription key="titleFontDescription" style="UICTFontTextStyleBody"/>
+                                                        </buttonConfiguration>
                                                     </button>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="90" id="G1T-Ax-XTz"/>
+                                                    <constraint firstAttribute="width" constant="100" id="G1T-Ax-XTz"/>
                                                     <constraint firstItem="rPI-Er-YyA" firstAttribute="leading" secondItem="P3C-Sl-IXD" secondAttribute="leading" constant="10" id="I5D-o4-ghz"/>
+                                                    <constraint firstItem="uXU-tE-jQe" firstAttribute="leading" secondItem="P3C-Sl-IXD" secondAttribute="leading" id="U6O-3A-zhp"/>
                                                 </constraints>
                                             </stackView>
                                         </subviews>
@@ -151,22 +153,21 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillProportionally" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="MMt-fs-ATl" userLabel="ColorConvertStack">
-                                        <rect key="frame" x="12.666666666666657" y="174.66666666666663" width="350" height="68"/>
+                                        <rect key="frame" x="7.6666666666666572" y="174.66666666666663" width="360" height="68"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="QTx-C0-DQu">
-                                                <rect key="frame" x="0.0" y="0.0" width="90" height="68"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="100" height="68"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TYPE" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="aMK-VM-aqL">
-                                                        <rect key="frame" x="10" y="0.0" width="70" height="24"/>
+                                                        <rect key="frame" x="10" y="0.0" width="80" height="24"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                         <color key="textColor" systemColor="secondaryLabelColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
-                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xhi-wK-IbK">
-                                                        <rect key="frame" x="0.0" y="24" width="90" height="44"/>
+                                                    <button opaque="NO" contentMode="scaleToFill" showsMenuAsPrimaryAction="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" changesSelectionAsPrimaryAction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Xhi-wK-IbK">
+                                                        <rect key="frame" x="0.0" y="24" width="100" height="44"/>
                                                         <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                                                         <constraints>
-                                                            <constraint firstAttribute="width" constant="90" id="EB5-M0-Iza"/>
                                                             <constraint firstAttribute="height" constant="44" id="a4y-Rr-8d1"/>
                                                         </constraints>
                                                         <state key="normal" title="Button"/>
@@ -174,12 +175,13 @@
                                                     </button>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstAttribute="width" constant="90" id="VfZ-WN-MBi"/>
+                                                    <constraint firstItem="Xhi-wK-IbK" firstAttribute="leading" secondItem="QTx-C0-DQu" secondAttribute="leading" id="I2G-ab-3fr"/>
+                                                    <constraint firstAttribute="width" constant="100" id="VfZ-WN-MBi"/>
                                                     <constraint firstItem="aMK-VM-aqL" firstAttribute="leading" secondItem="QTx-C0-DQu" secondAttribute="leading" constant="10" id="lZN-xX-XB2"/>
                                                 </constraints>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="hgl-Ii-gWP">
-                                                <rect key="frame" x="100" y="0.0" width="250" height="68"/>
+                                                <rect key="frame" x="110" y="0.0" width="250" height="68"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="OUTPUT" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xly-TF-dN4">
                                                         <rect key="frame" x="10" y="0.0" width="230" height="24"/>
@@ -420,7 +422,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Schemes" id="lhm-ao-sPq">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="SCv-fs-W3T">
+                        <barButtonItem key="rightBarButtonItem" id="SCv-fs-W3T">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="3bN-ni-p6t">
                                 <rect key="frame" x="307" y="5" width="52" height="34.333333333333336"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -460,7 +462,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="108"/>
                                 <items>
                                     <navigationItem title="Settings" largeTitleDisplayMode="always" id="no7-HI-gWY">
-                                        <barButtonItem key="leftBarButtonItem" title="back" style="plain" id="xyr-rz-8pO">
+                                        <barButtonItem key="leftBarButtonItem" title="back" id="xyr-rz-8pO">
                                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="KzM-aL-Cuy">
                                                 <rect key="frame" x="16" y="6" width="83" height="44"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -674,7 +676,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Swatches" id="oag-Vj-h52">
-                        <barButtonItem key="rightBarButtonItem" style="plain" id="VV3-7R-Jar">
+                        <barButtonItem key="rightBarButtonItem" id="VV3-7R-Jar">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" id="W4O-2z-Jbu">
                                 <rect key="frame" x="307" y="5" width="52" height="34.333333333333336"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
